--- a/index.html
+++ b/index.html
@@ -1,44 +1,87 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="cctrinle.github.io : Hello World">
+    <title>cctrinle.github.io by cctrinle</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>cctrinle.github.io</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>cctrinle.github.io</h1>
+        <p>Public Key: 0xCFA1008A</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/cctrinle">View on GitHub</a>
 
-          <h1 id="project_title">cctrinle.github.io</h1>
-          <h2 id="project_tagline">Hello World</h2>
+        <p class="view"><a href="https://github.com/cctrinle">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
+      </header>
+      <section>
+        <p>—–BEGIN PGP PUBLIC KEY BLOCK—–
+Version: GnuPG/MacGPG2 v2.0.22 (Darwin)
+Comment: GPGTools – <a href="https://gpgtools.org">https://gpgtools.org</a></p>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p><strong>Hello World</strong></p>
+<p>mQINBFQsBrIBEADGt2k/EoQZwdMaEdRNl91MPwvRXnXlRW5QiXq9KmtpkRue+1PK
+HIGQy7jWHmsnPJ5VGb9bklLJOMPJ6qyhbEBzd6ewYHlGmXFQB+PwgLvmBWv63Yzn
+kCGisyQtXU7jrgOeTuAdkh10ljg4AIwrq4LdzzYVqfX1COFL4tsOVpEUqnohSE2N
+2wqXCF0ODzbq/xATX4zIemQGcKTkkLPdgON9D7z8JkTOZfSCq+Pi63nukdDtr9+d
+ofjU+kF2qAQ0kJwbe9w45yTsP7GMdwhWS8sYmfgFZCojjYcpIkAVAzCcCMcexYBQ
+2vkoFxl8FUldCyRFP3cMBbExN/AUSdHOR/2ahFORcbXlTf+II2Mord9bVL+ECNJw
+KVsWnxo/3A52YOFkpmfuV9pm1wvwSi7RAIW8xNoAHKk9fy/e0kQ6kV/uBhSq+xR+
+MQi9+C0bZtF+dK6wU2ldUz16n8sWWSoVaekBTVpmjAdqHGQ+4jbswbgFyaZ2dzNU
+R+mAGcqaRZEkhx6DNAaNGYm0Vsz+/VecA1J97iD0Lsb5QQres26GmmnYHVOdHHLf
+aSuk6bhryY4QwpeNNVtK3vlE+YXrN0UcU3dYrfexMjGH3fuwTHDMXoQclSbBo5QT
+4AVUdmpLlJKs2WNNL4CVk1VHXWQs92PEYw+GHrdWS2YqzSea2Mmln2nJoQARAQAB
+tB1jY3RyaW5sZSA8Y2N0cmlubGVAZ21haWwuY29tPokCPQQTAQoAJwUCVCwGsgIb
+IwUJCWYBgAULCQgHAwUVCgkICwUWAgMBAAIeAQIXgAAKCRCVXgmAz6EAirN5EACl
+5366SsBJ8LySEVV3UM77sXm+SIyzstOlqGGrHyfUEyGLVNVv3/m/aqEUA3rHPMJK
+PRScZvHQA44ZmtCg1tLAy7QaPAYqe5GBQdR2TCBvkc78clsbMXOc7YbXYfvosbHM
+Hwz8DgQ9xBo6//880UnwS4IKR59bPwWiKDogzRaQwBotme3owzjmTplRgeNgGgfK
+E89Ux/9RrM+HV95+GhiDQkjbNLScT9nQzzrYx74pHrnYQhT6ph6RrJKvSWLq+t1W
+Z6YDEqL/JTKkeVtjv/nuTAegcsIcIq9vTJz1lg3UjlnKtsSdGK3lEx+yc5jjOaBJ
+6es4N1CzBs632iNZybLCwWFXZrej588B6XJCgZgzIERVbZlZGrCBy+6uGpDvroao
+v5TLaTpIoGhhx938QwmqOVq+MzhbjY4dcFhqxeFXegQEO2Dl/NFrfz+OQRdPuApY
+VIpagkHImMy3wKjtysN5Oe89MMWwvCLoTeYpqWl/sV885OIg7BEaupwDjh7iaOVd
+bbbhts+6pG1HtmW55tppMe4s+kz/WwLkh1gfOSfCUjKJ9AoGTbZjw6O063BrgvX3
+Zc+nzsB0wiA50uIEDqT8nDMdxcN0rb1ecuSVaHsqHy+E0I/OdHZLrqsukvuBBYI9
+a9pOtJME6KDzV6jQ7MP4b4DW199u8/J63aBRcU3l5LkCDQRULAayARAAo1+ri7gI
+vn0lckokCTkd2ZjeJuMKA4hOyBwkiQYjShAtZ6WsomuAehxo+BmDgnh1KqIMm0yS
+UW8NFbXlPrmAO7eaqdbBkcBcy5LF1sSLMlbfqQvpaFQzCKI/hcLQYTGjcwJcTiCz
+PB/vW7LOGhtYNOVCBYurp65xOrfKWR7266fXnsJeRz0gnvGn6t4x5Nvk0h4uu34E
+Nvgqwfd1LyXbsMAj9oXGlTPkzA3v5jBaEHWm4ntoqjj0PdGZVfduZKVcaP1ne/Gd
+7nnnEiMm+RGGC5ayK3U0hlaLoid/aCLliq7g1w9FHallU3zsIvW4TO5N4gDMm/6B
+q4CY2mYxieBBhn9BkRVrEDTQ+VPQDx+IW06OCbgbzezlYpQLuCbThQ3lbqFSTX5m
+xod+OSmp3Kb8QeGDzFKlLCVZ2wC70PbhkrAJi8C/wXEAB0n2UgOxA5o79VSdRSqj
+4arqdD8VHXTFvNWmTKYWG1lwxz23mg9fZrEbsxmteju9ap1kbzi8ZYFLtAuY3uif
+VS36E7XQMa8OITT2Zt9kHxKEVSBC8V39dBUwP4TQppPxq50Kw+6910rW8YbACgZD
+BCWe9awmvwhozJvYZ2n9vM17Jl2Ga0UKHmfIcptqTLBjlBL/Rd3UQvktf5AxtE0t
+a/I9m6Rv1fGPrEF5DLM0OdZpA6M6J+gHiN8AEQEAAYkCJQQYAQoADwUCVCwGsgIb
+DAUJCWYBgAAKCRCVXgmAz6EAioVCD/45oBo/nWS0qQKDuRIbKM9vsLGtO+L4GLSN
+YEmDnTUViUHs3F78oe4IwbtKKK8otvhRfCcO/F1PjJ7JIVU+BYvXYoPaeeKDoGnn
+WEOdqJJdRRwhrgiYLhE1MwLBVUx21twz9LTnBcTUc9RBdFEwd9Hma0X3WCkmUdI4
+SjQ38xIedwI6imsYhEE1mCVzRIgw9LDfeBEaX1yEozJN+NC58Z4lYsdUJwf7hzor
+FHye32YCXE+kuWaLVU3g5FJS6XtWCZeWYvQvUuH+uYobx3M2YJmiRoTmL89gMa8n
+2ORt0FKvdfja10GMf1ISAXBLjoNbwBbHtHwj5c3KI49EOBTlYvQ1ET2DihVr+XyY
+5DtXetEvQOMfyy/ErM84SC6aQ+Rnhw1XB8AW+kizTdLP1yL6ZkuBrx2JJaFgdWvI
+xE9A7ZqTUUcCzvXKn6UEaeCY1HF+JogwqD6meNim0rbQF4o1jqFkJlww//qKS0UV
+A49RKcEPWh2AkWp9EASsx2rHY5ExkFjdzRZt4X5wPd4OLlOHNXtQg3KO2h1gzerT
+tg7W7cVPSZ7Fy7LhfCM0hR3ycJInezbBTBl1VsALeI1DUe+kc73CeL4QijtXjQ9k
+dNyBqbswJGAx0+tYdTZSRH14mfxlZ/TsQ67r9SoIZKQS/SjBjzDKc1pooCchlc04
+ACNQ82lvfQ==
+=7Q0p
+—–END PGP PUBLIC KEY BLOCK—–</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
