Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
     <div class="wrapper">
       <header>
         <h1>cctrinle.github.io</h1>
-        <p>Public Key: 0xCFA1008A</p>
+        <p></p>
 
 
         <p class="view"><a href="https://github.com/cctrinle">View My GitHub Profile</a></p>
 
       </header>
       <section>
-        <p>—–BEGIN PGP PUBLIC KEY BLOCK—–
+        <p><strong>Public Key: 0xCFA1008A</strong></p>
+
+<p>—–BEGIN PGP PUBLIC KEY BLOCK—–
 Version: GnuPG/MacGPG2 v2.0.22 (Darwin)
 Comment: GPGTools – <a href="https://gpgtools.org">https://gpgtools.org</a></p>
 
