Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,89 +1,119 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>cctrinle.github.io by cctrinle</title>
+    <meta name="description" content="cctrinle.github.io : ">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>cctrinle.github.io</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>cctrinle.github.io</h1>
-        <p></p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/cctrinle">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/cctrinle">View My GitHub Profile</a></p>
+          <h1 id="project_title">cctrinle.github.io</h1>
+          <h2 id="project_tagline"></h2>
 
-      </header>
-      <section>
-        <p><strong>Public Key: 0xCFA1008A</strong></p>
+        </header>
+    </div>
 
-<p>—–BEGIN PGP PUBLIC KEY BLOCK—–
-Version: GnuPG/MacGPG2 v2.0.22 (Darwin)
-Comment: GPGTools – <a href="https://gpgtools.org">https://gpgtools.org</a></p>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: Keybase OpenPGP v2.0.8
+Comment: <a href="https://keybase.io/crypto">https://keybase.io/crypto</a></p>
 
-<p>mQINBFQsBrIBEADGt2k/EoQZwdMaEdRNl91MPwvRXnXlRW5QiXq9KmtpkRue+1PK
-HIGQy7jWHmsnPJ5VGb9bklLJOMPJ6qyhbEBzd6ewYHlGmXFQB+PwgLvmBWv63Yzn
-kCGisyQtXU7jrgOeTuAdkh10ljg4AIwrq4LdzzYVqfX1COFL4tsOVpEUqnohSE2N
-2wqXCF0ODzbq/xATX4zIemQGcKTkkLPdgON9D7z8JkTOZfSCq+Pi63nukdDtr9+d
-ofjU+kF2qAQ0kJwbe9w45yTsP7GMdwhWS8sYmfgFZCojjYcpIkAVAzCcCMcexYBQ
-2vkoFxl8FUldCyRFP3cMBbExN/AUSdHOR/2ahFORcbXlTf+II2Mord9bVL+ECNJw
-KVsWnxo/3A52YOFkpmfuV9pm1wvwSi7RAIW8xNoAHKk9fy/e0kQ6kV/uBhSq+xR+
-MQi9+C0bZtF+dK6wU2ldUz16n8sWWSoVaekBTVpmjAdqHGQ+4jbswbgFyaZ2dzNU
-R+mAGcqaRZEkhx6DNAaNGYm0Vsz+/VecA1J97iD0Lsb5QQres26GmmnYHVOdHHLf
-aSuk6bhryY4QwpeNNVtK3vlE+YXrN0UcU3dYrfexMjGH3fuwTHDMXoQclSbBo5QT
-4AVUdmpLlJKs2WNNL4CVk1VHXWQs92PEYw+GHrdWS2YqzSea2Mmln2nJoQARAQAB
-tB1jY3RyaW5sZSA8Y2N0cmlubGVAZ21haWwuY29tPokCPQQTAQoAJwUCVCwGsgIb
-IwUJCWYBgAULCQgHAwUVCgkICwUWAgMBAAIeAQIXgAAKCRCVXgmAz6EAirN5EACl
-5366SsBJ8LySEVV3UM77sXm+SIyzstOlqGGrHyfUEyGLVNVv3/m/aqEUA3rHPMJK
-PRScZvHQA44ZmtCg1tLAy7QaPAYqe5GBQdR2TCBvkc78clsbMXOc7YbXYfvosbHM
-Hwz8DgQ9xBo6//880UnwS4IKR59bPwWiKDogzRaQwBotme3owzjmTplRgeNgGgfK
-E89Ux/9RrM+HV95+GhiDQkjbNLScT9nQzzrYx74pHrnYQhT6ph6RrJKvSWLq+t1W
-Z6YDEqL/JTKkeVtjv/nuTAegcsIcIq9vTJz1lg3UjlnKtsSdGK3lEx+yc5jjOaBJ
-6es4N1CzBs632iNZybLCwWFXZrej588B6XJCgZgzIERVbZlZGrCBy+6uGpDvroao
-v5TLaTpIoGhhx938QwmqOVq+MzhbjY4dcFhqxeFXegQEO2Dl/NFrfz+OQRdPuApY
-VIpagkHImMy3wKjtysN5Oe89MMWwvCLoTeYpqWl/sV885OIg7BEaupwDjh7iaOVd
-bbbhts+6pG1HtmW55tppMe4s+kz/WwLkh1gfOSfCUjKJ9AoGTbZjw6O063BrgvX3
-Zc+nzsB0wiA50uIEDqT8nDMdxcN0rb1ecuSVaHsqHy+E0I/OdHZLrqsukvuBBYI9
-a9pOtJME6KDzV6jQ7MP4b4DW199u8/J63aBRcU3l5LkCDQRULAayARAAo1+ri7gI
-vn0lckokCTkd2ZjeJuMKA4hOyBwkiQYjShAtZ6WsomuAehxo+BmDgnh1KqIMm0yS
-UW8NFbXlPrmAO7eaqdbBkcBcy5LF1sSLMlbfqQvpaFQzCKI/hcLQYTGjcwJcTiCz
-PB/vW7LOGhtYNOVCBYurp65xOrfKWR7266fXnsJeRz0gnvGn6t4x5Nvk0h4uu34E
-Nvgqwfd1LyXbsMAj9oXGlTPkzA3v5jBaEHWm4ntoqjj0PdGZVfduZKVcaP1ne/Gd
-7nnnEiMm+RGGC5ayK3U0hlaLoid/aCLliq7g1w9FHallU3zsIvW4TO5N4gDMm/6B
-q4CY2mYxieBBhn9BkRVrEDTQ+VPQDx+IW06OCbgbzezlYpQLuCbThQ3lbqFSTX5m
-xod+OSmp3Kb8QeGDzFKlLCVZ2wC70PbhkrAJi8C/wXEAB0n2UgOxA5o79VSdRSqj
-4arqdD8VHXTFvNWmTKYWG1lwxz23mg9fZrEbsxmteju9ap1kbzi8ZYFLtAuY3uif
-VS36E7XQMa8OITT2Zt9kHxKEVSBC8V39dBUwP4TQppPxq50Kw+6910rW8YbACgZD
-BCWe9awmvwhozJvYZ2n9vM17Jl2Ga0UKHmfIcptqTLBjlBL/Rd3UQvktf5AxtE0t
-a/I9m6Rv1fGPrEF5DLM0OdZpA6M6J+gHiN8AEQEAAYkCJQQYAQoADwUCVCwGsgIb
-DAUJCWYBgAAKCRCVXgmAz6EAioVCD/45oBo/nWS0qQKDuRIbKM9vsLGtO+L4GLSN
-YEmDnTUViUHs3F78oe4IwbtKKK8otvhRfCcO/F1PjJ7JIVU+BYvXYoPaeeKDoGnn
-WEOdqJJdRRwhrgiYLhE1MwLBVUx21twz9LTnBcTUc9RBdFEwd9Hma0X3WCkmUdI4
-SjQ38xIedwI6imsYhEE1mCVzRIgw9LDfeBEaX1yEozJN+NC58Z4lYsdUJwf7hzor
-FHye32YCXE+kuWaLVU3g5FJS6XtWCZeWYvQvUuH+uYobx3M2YJmiRoTmL89gMa8n
-2ORt0FKvdfja10GMf1ISAXBLjoNbwBbHtHwj5c3KI49EOBTlYvQ1ET2DihVr+XyY
-5DtXetEvQOMfyy/ErM84SC6aQ+Rnhw1XB8AW+kizTdLP1yL6ZkuBrx2JJaFgdWvI
-xE9A7ZqTUUcCzvXKn6UEaeCY1HF+JogwqD6meNim0rbQF4o1jqFkJlww//qKS0UV
-A49RKcEPWh2AkWp9EASsx2rHY5ExkFjdzRZt4X5wPd4OLlOHNXtQg3KO2h1gzerT
-tg7W7cVPSZ7Fy7LhfCM0hR3ycJInezbBTBl1VsALeI1DUe+kc73CeL4QijtXjQ9k
-dNyBqbswJGAx0+tYdTZSRH14mfxlZ/TsQ67r9SoIZKQS/SjBjzDKc1pooCchlc04
-ACNQ82lvfQ==
-=7Q0p
-—–END PGP PUBLIC KEY BLOCK—–</p>
+<p>xsFNBFULX3cBEAC611QnKEpY83rEeAh05Kx4xhVZ3AbpJqktdyr7QaDj973rv6SN
+dRm68HDFQhz8IP/PqyR+vdU+pzlNW1fLG6zXAOeQQW5jitqdTDi7OZyHWJIN0FHd
+yQqpS09ST9Fr7TYN+lUQYQgHvC6fHFC2w2OhjDGpT+1WGPN7pIhUbLOfUOIYLaP9
+M/nlO5jHsIP7r/KCEtOo8pN1AaQ0Mp8FKJgzhdfo2J4d/zIpEl+JaBSWIV+Yst0j
+i0qsUG8mOnVM1SyX8q7BENxOlMR8jJksEqj+XxSH6jhzI0z92zYIGY6/Q3m+4hsm
+00iG8Vp6U87QJ8MHxcVE6zEVSNRUY9klqA/1KHUXseK2tQvTjUe90X9Po75d5Hdm
+a4dBDkH8yRK9VgBkkubcKmcLH0VzjzQTEeST6G+i6OgUXoXq/LkMeAa2Fn8pp9tB
+G7VAEGzM0S+Nw95qGQOCXRajQJrzjDXbbH8lI29IuYG73BQfrXdVfwB42XmdObyC
+2UQrVq/pPYksGKRucuGUxCk+HNmdxkxELTBxI7Z21TQi0+clbHrpzlBBPg5G6Urj
+Q60fYRLuRF2stX00FIafza4vcrFr+qkvXU3LQCNG0jZbjtFA6r5f3LFDoPhno60u
+eQjoI04EWpYMZ4cYRMW4P4AfXDl7+RW1d+FjFw7Imjpib1R84igKHOlVNQARAQAB
+zR9rZXliYXNlLmlvL2NjdCA8Y2N0QGtleWJhc2UuaW8+wsFwBBMBCgAaBQJVC193
+AhsvAwsJBwMVCggCHgECF4ACGQEACgkQePGf+u030lP6LBAAtmCsSPBuL6I8RsZy
+WxsLTiHUBVFMHLuET8eRWlAI0KmI4IdaCFWCMQB6oGEuR7Z+mfvefFUevBnaMO1Q
+czOVn50ahv7CpQV8LKjsPsrBRhy8IVcb+xGnQ/VsTyLqbDKS+lUKQGo3UsyNt9f/
+oVbcOTN8aYOJanVF4y7+6PUfsvjuqcr0ErT46e1b9PeMlfIEWh3utUndpNWuFtcG
+MTRpQ9P6PWRu8uy6qm24bDNeyqg+w5lWKFqxa3CdjNo9ao2/nCrV867Mr2RJvC06
+/QIvvuoZkZpExWcLmjWBgcNH/h/34Xg1XfDFcUILjgupT0mRrWVGpSmB7z2CsXiv
+lmBSaqz5MwFzRTAtmaHrA+JrEqUy0R0S993yqPqAAoQirLKSd00Fxl38HhWfmCLh
+6+URDYvl4/mNEJvUByUJtJa+FGGnqiKawVQcsg/Q8DJNWgUPe+mB1oL71u6JlfsM
+xEq6Pe7KbcblXq4ezkDRGe0O1qHYZ9Or3YLKTdVZcjuRL3qDcKhTRM3Tb3Xaj20e
+/9hu5l5PYhzgRd5zFAfSsm09P/YIxLsUeOnsMrVqSflDHhPRDc7ckhtfsVDiTiB9
+td/OlzIDAadndFjUV87IPIP0T74bMa914ZLvSvjw/CUPQgrZpiGue3Z0pSGQ2cJP
+j4Xrjhvq3TSa740l7SAMnXqxsv3OwE0EVQtfdwEIALDMzeL7R6xPYjg6u7GJ4G4e
+7iYRjPLLvhqyhCh0o/KVfvRjrYnOSu6tX6u87mnSgN61HVqElfKJVm6V1us3rrmp
+MFieOaauUcUn/Sx/H5rGk9jpopnlPYQN1MeDX6XrpupCDC+99NRwTlWugoYGrPzh
+uZliGOENWGLRJ1CIHh0XGNzXjWNgzWVEmtW/OnP4aX+bFoXtEBX2rubmS5mblA5k
+yiDiCgPWqvuflRfIjntszDLKgcJx/YCda4gaJq3O5xvHrW3e/n7jyPWKeYcYGi9o
+wGFnV7EIq6Y64HidnJqgrodw4EShw4YxRf5JybAWIgILtDvG2w+Yn3UIotju1ksA
+EQEAAcLChAQYAQoADwUCVQtfdwUJDwmcAAIbAgEpCRB48Z/67TfSU8BdIAQZAQoA
+BgUCVQtfdwAKCRAee7Oho9lL7YQGB/9qgmc+oRt1trBuvmzlznZU1B1rNY+8vC9S
+vKoY5cu/Bne5bnz4puXBdFCMQhjGI1lVgnc5aHfAwhNYVH/d5mpScHrJbZmBZ6c4
+HCz1ELb0t+1mzYqfgfithIgM5L6iDsNk/eDASZhq48fdnJcVlJwMv4uLBAmY+Doz
+y7NHgCOfmQM5UT9X7Lt4HdJJW/ljU2sKLJCaO0Nhv13Z0qemMVRDAGK2JZf3TgAH
+oBZbKcsa4zLmqOlH9O7kxqbgHEGj2sm5O1+TNPvJdieUNoNRHCM0LHxkv2uU7Cpg
+o2XZqzYixcCs9SdChjYDtz5Dqy/qgTRsgSMEpiFFEZy+HZW5RbOYNKQP/iuPy5ci
+LDOl2p5N5DnXhXIgNeAVD1hM4H4bbhkUmg1Rk4FrGC3US92fHxSFFaGcEPyx84gJ
++KgcrfEuDWD1Hln0Uj21DEZgyRYgjeFGpsgNGO06AW8Xej/AbI+XB+cjS1yFNTg8
+qgGgHX9SS5w1HwI9K7s8R568PLCWekmcef6nURs1yKgAwtAFf3sQUKFYPxofbrjQ
+lDAFRuVKerAtSmC0VJCAJhDGGO8bT3E+4Kc6ZGvwIAAcVYAL/jfQAENTT9oVZ8CZ
+jQiU8kAHP/kcIqjfJFr77NCx6Q1RS9LVerLKN6jYjOdif27B9KDizNtF4mgYpfpR
+wBhAs8pLL1X183E5ld3uwqLFOqmxXmj0UJhW+4KyNoY54JAhGRVm5S3CMhe1HUHm
+CaQ1r1TwKI/7DaekTHnlgeoV+bjrmOR66b4BlcaxA6McyEaCb/kfpS4RVBcYfC6j
++YwEu1oh08eN8DXNpuxPLPcuBIqfDGeqVkJDUgRT5zVgJ6oMUS7xUf58jttUtFWK
+5Ry/BzNZ1SfSA+TN7gh4I2ovvP66xvo/XUYUxgiLsiVXylY294+56QB8DEnPzV38
+aVqLstnd0eCwEenKQxAUA8M5jgypz6gKLhM2iyKHaZ5Z6Fi2tXT1CuXWMxWcTvOl
+gWn3jQyeIU0navLTPYNAlQU+HZlFsNyjwkT7zsBNBFULX3cBCADC81VbE3EbS9c7
+Uw3OGMtEE2ZKoYdC9p9Wn9Xx15h+fIlIEskgurkOcCeN7m9BM1N3Te/I5M60ZSlz
+EHrkn9qcgItiBp2GpsDh6c68fDCMWoQu/lkhPIy2q/+1MxoXOKnqpoyhZFZy1QNW
+OqWjd+7jvFsgyg0gVYRQ3Ny10kZnxO9QgRnxajBwntI5gjx/MSnEJN/4QYabEIl1
+V2O6ap/5N4wLygJEpQ/FEV7SeGed0IwQywoBQp0rwERYi9r6AS2Sr+tKCKRRcy5w
+C7m0neiIds0xO+wzSOblkGtenUTX3A4ST3UDuHM/vT1XbRaJsPXPyH+GCYV0bM75
+Ce5gH0zLABEBAAHCwoQEGAEKAA8FAlULX3cFCQ8JnAACGwwBKQkQePGf+u030lPA
+XSAEGQEKAAYFAlULX3cACgkQ11kOYRstGUmqmAf/QkllO2cN5yKZGd+B8/S42HLd
+PFiK1N+UkY2erT/4sJ0qpZJRgBWfJnYqkJpL3df8Cj/XP8av9onQ+l3mEFt4g1ak
+JFbPT/4jf8Jd9nTbhX5TNSevIB5JpiD7JW8zqmRNf01Jz9h8Y2pF0Z94bZgBT1Rz
+TuEIPKSELYeG+tZR8v+qp1/1jaZ2hXKDlLBWYWnJM5QzHn67WrRJRM805PSa7l5M
++7LhkHn8J4Yfr9aGFPj2GItupvx1rhf8WiuLWsJgdrqgBS4nUkjPB439mJHtMgmu
+P0QQvaoqXrO4B+e3auJMuQAmUopC+62Q2ywkwA/pcyGua1ORzoN/zc/BsbBlhwft
+D/sG1pT0XXVkdK3PVc+sRqD4k5Q/Uas0RK7b23LTrKKAlXpyp5oS83vUMf3QCIV+
+d8kIC9SJmyGZiF/9hn0Jzs8x5qeRBx73ik6gY70z5OzSwr/PDuY7G1jF/YfS0E+9
+q0wHt2fas303g1H9v0r0vO7aLWwFpGSPwB/0LOgxzuNixQAGLt6+Sqw/6X9+hcWL
+nEtIr+2+/FMb1u5n4tCaqsXzcurjbxKDDNYXDkScWxS9l+BoJT9lAc4jtrz9WcR/
+eHqISKvbnYTvSKpOb5/1MC6VXlCAjV0ais2hRQ0NAkBuq1fbV2mUmZrPLifHcOgC
+T8V5prpICc8dgL/ME2h4jh3VHaxshnzVXXMR8gKoQSKWCAdwO0pVHpwybCj+abrj
+cRu7qpjxgBd6p2XkEJ1WdUPAgKkyVHkw3CJvut4TQqD6u3JAfQubHj1mPEzWexNI
+oLwViP5nozdjI+18IdFpfINywOb7K0YDUlBEnJcpcnsmUrnsJ4yrVcLZX8mAEhnP
+bG9grOicODYc3G5FOtCH9WNjNX+5PZqwHZORgcwCLeGWY7H93zci2gGiWc9OGrz2
+ZqaGQl623cHeXIoR2ESNpokpFOg/XegyRJ7+dkJ4x2qw/KTQMJv7oDgq9NMzn+bd
+5tNVfnRROv4fgFrQhkvVjEDZeMQEj1VFYPjiO7SRmFhwEw==
+=6VTv
+-----END PGP PUBLIC KEY BLOCK-----</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
