Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="cctrinle.github.io : ">
+    <meta name="description" content="cctrinle.github.io/keybase.txt  : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>cctrinle.github.io</title>
+    <title>cctrinle.github.io/keybase.txt </title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cctrinle">View on GitHub</a>
 
-          <h1 id="project_title">cctrinle.github.io</h1>
+          <h1 id="project_title">cctrinle.github.io/keybase.txt </h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -27,82 +27,78 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>-----BEGIN PGP PUBLIC KEY BLOCK-----
+        <h1></h1>
+
+<h2>
+<a id="httpskeybaseiocct" class="anchor" href="#httpskeybaseiocct" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://keybase.io/cct">https://keybase.io/cct</a>
+</h2>
+
+<p>I hereby claim:</p>
+
+<ul>
+<li>I am an admin of <a href="https://cctrinle.github.io">https://cctrinle.github.io</a>
+</li>
+<li>I am cct (<a href="https://keybase.io/cct">https://keybase.io/cct</a>) on keybase.</li>
+<li>I have a public key with fingerprint BE85 AD9D B416 B958 836E  E011 78F1 9FFA ED37 D253</li>
+</ul>
+
+<p>To do so, I am signing this object:</p>
+
+<p>{
+    "body": {
+        "key": {
+            "fingerprint": "be85ad9db416b958836ee01178f19ffaed37d253",
+            "host": "keybase.io",
+            "key_id": "78f19ffaed37d253",
+            "kid": "0101880524956ba5755ecb7b2f8071637ae3ab064cd209193ee1fbdf63a616fb11fe0a",
+            "uid": "b821563ce1115410c81f1a20758afc19",
+            "username": "cct"
+        },
+        "service": {
+            "hostname": "cctrinle.github.io",
+            "protocol": "https:"
+        },
+        "type": "web_service_binding",
+        "version": 1
+    },
+    "ctime": 1426871988,
+    "expire_in": 157680000,
+    "prev": "45920e04b290dc46054eee244f233baebee55c95e4133f3c061260c0e99aa4a2",
+    "seqno": 7,
+    "tag": "signature"
+}</p>
+
+<p>which yields the signature:</p>
+
+<p>-----BEGIN PGP MESSAGE-----
 Version: Keybase OpenPGP v2.0.8
 Comment: <a href="https://keybase.io/crypto">https://keybase.io/crypto</a></p>
 
-<p>xsFNBFULX3cBEAC611QnKEpY83rEeAh05Kx4xhVZ3AbpJqktdyr7QaDj973rv6SN
-dRm68HDFQhz8IP/PqyR+vdU+pzlNW1fLG6zXAOeQQW5jitqdTDi7OZyHWJIN0FHd
-yQqpS09ST9Fr7TYN+lUQYQgHvC6fHFC2w2OhjDGpT+1WGPN7pIhUbLOfUOIYLaP9
-M/nlO5jHsIP7r/KCEtOo8pN1AaQ0Mp8FKJgzhdfo2J4d/zIpEl+JaBSWIV+Yst0j
-i0qsUG8mOnVM1SyX8q7BENxOlMR8jJksEqj+XxSH6jhzI0z92zYIGY6/Q3m+4hsm
-00iG8Vp6U87QJ8MHxcVE6zEVSNRUY9klqA/1KHUXseK2tQvTjUe90X9Po75d5Hdm
-a4dBDkH8yRK9VgBkkubcKmcLH0VzjzQTEeST6G+i6OgUXoXq/LkMeAa2Fn8pp9tB
-G7VAEGzM0S+Nw95qGQOCXRajQJrzjDXbbH8lI29IuYG73BQfrXdVfwB42XmdObyC
-2UQrVq/pPYksGKRucuGUxCk+HNmdxkxELTBxI7Z21TQi0+clbHrpzlBBPg5G6Urj
-Q60fYRLuRF2stX00FIafza4vcrFr+qkvXU3LQCNG0jZbjtFA6r5f3LFDoPhno60u
-eQjoI04EWpYMZ4cYRMW4P4AfXDl7+RW1d+FjFw7Imjpib1R84igKHOlVNQARAQAB
-zR9rZXliYXNlLmlvL2NjdCA8Y2N0QGtleWJhc2UuaW8+wsFwBBMBCgAaBQJVC193
-AhsvAwsJBwMVCggCHgECF4ACGQEACgkQePGf+u030lP6LBAAtmCsSPBuL6I8RsZy
-WxsLTiHUBVFMHLuET8eRWlAI0KmI4IdaCFWCMQB6oGEuR7Z+mfvefFUevBnaMO1Q
-czOVn50ahv7CpQV8LKjsPsrBRhy8IVcb+xGnQ/VsTyLqbDKS+lUKQGo3UsyNt9f/
-oVbcOTN8aYOJanVF4y7+6PUfsvjuqcr0ErT46e1b9PeMlfIEWh3utUndpNWuFtcG
-MTRpQ9P6PWRu8uy6qm24bDNeyqg+w5lWKFqxa3CdjNo9ao2/nCrV867Mr2RJvC06
-/QIvvuoZkZpExWcLmjWBgcNH/h/34Xg1XfDFcUILjgupT0mRrWVGpSmB7z2CsXiv
-lmBSaqz5MwFzRTAtmaHrA+JrEqUy0R0S993yqPqAAoQirLKSd00Fxl38HhWfmCLh
-6+URDYvl4/mNEJvUByUJtJa+FGGnqiKawVQcsg/Q8DJNWgUPe+mB1oL71u6JlfsM
-xEq6Pe7KbcblXq4ezkDRGe0O1qHYZ9Or3YLKTdVZcjuRL3qDcKhTRM3Tb3Xaj20e
-/9hu5l5PYhzgRd5zFAfSsm09P/YIxLsUeOnsMrVqSflDHhPRDc7ckhtfsVDiTiB9
-td/OlzIDAadndFjUV87IPIP0T74bMa914ZLvSvjw/CUPQgrZpiGue3Z0pSGQ2cJP
-j4Xrjhvq3TSa740l7SAMnXqxsv3OwE0EVQtfdwEIALDMzeL7R6xPYjg6u7GJ4G4e
-7iYRjPLLvhqyhCh0o/KVfvRjrYnOSu6tX6u87mnSgN61HVqElfKJVm6V1us3rrmp
-MFieOaauUcUn/Sx/H5rGk9jpopnlPYQN1MeDX6XrpupCDC+99NRwTlWugoYGrPzh
-uZliGOENWGLRJ1CIHh0XGNzXjWNgzWVEmtW/OnP4aX+bFoXtEBX2rubmS5mblA5k
-yiDiCgPWqvuflRfIjntszDLKgcJx/YCda4gaJq3O5xvHrW3e/n7jyPWKeYcYGi9o
-wGFnV7EIq6Y64HidnJqgrodw4EShw4YxRf5JybAWIgILtDvG2w+Yn3UIotju1ksA
-EQEAAcLChAQYAQoADwUCVQtfdwUJDwmcAAIbAgEpCRB48Z/67TfSU8BdIAQZAQoA
-BgUCVQtfdwAKCRAee7Oho9lL7YQGB/9qgmc+oRt1trBuvmzlznZU1B1rNY+8vC9S
-vKoY5cu/Bne5bnz4puXBdFCMQhjGI1lVgnc5aHfAwhNYVH/d5mpScHrJbZmBZ6c4
-HCz1ELb0t+1mzYqfgfithIgM5L6iDsNk/eDASZhq48fdnJcVlJwMv4uLBAmY+Doz
-y7NHgCOfmQM5UT9X7Lt4HdJJW/ljU2sKLJCaO0Nhv13Z0qemMVRDAGK2JZf3TgAH
-oBZbKcsa4zLmqOlH9O7kxqbgHEGj2sm5O1+TNPvJdieUNoNRHCM0LHxkv2uU7Cpg
-o2XZqzYixcCs9SdChjYDtz5Dqy/qgTRsgSMEpiFFEZy+HZW5RbOYNKQP/iuPy5ci
-LDOl2p5N5DnXhXIgNeAVD1hM4H4bbhkUmg1Rk4FrGC3US92fHxSFFaGcEPyx84gJ
-+KgcrfEuDWD1Hln0Uj21DEZgyRYgjeFGpsgNGO06AW8Xej/AbI+XB+cjS1yFNTg8
-qgGgHX9SS5w1HwI9K7s8R568PLCWekmcef6nURs1yKgAwtAFf3sQUKFYPxofbrjQ
-lDAFRuVKerAtSmC0VJCAJhDGGO8bT3E+4Kc6ZGvwIAAcVYAL/jfQAENTT9oVZ8CZ
-jQiU8kAHP/kcIqjfJFr77NCx6Q1RS9LVerLKN6jYjOdif27B9KDizNtF4mgYpfpR
-wBhAs8pLL1X183E5ld3uwqLFOqmxXmj0UJhW+4KyNoY54JAhGRVm5S3CMhe1HUHm
-CaQ1r1TwKI/7DaekTHnlgeoV+bjrmOR66b4BlcaxA6McyEaCb/kfpS4RVBcYfC6j
-+YwEu1oh08eN8DXNpuxPLPcuBIqfDGeqVkJDUgRT5zVgJ6oMUS7xUf58jttUtFWK
-5Ry/BzNZ1SfSA+TN7gh4I2ovvP66xvo/XUYUxgiLsiVXylY294+56QB8DEnPzV38
-aVqLstnd0eCwEenKQxAUA8M5jgypz6gKLhM2iyKHaZ5Z6Fi2tXT1CuXWMxWcTvOl
-gWn3jQyeIU0navLTPYNAlQU+HZlFsNyjwkT7zsBNBFULX3cBCADC81VbE3EbS9c7
-Uw3OGMtEE2ZKoYdC9p9Wn9Xx15h+fIlIEskgurkOcCeN7m9BM1N3Te/I5M60ZSlz
-EHrkn9qcgItiBp2GpsDh6c68fDCMWoQu/lkhPIy2q/+1MxoXOKnqpoyhZFZy1QNW
-OqWjd+7jvFsgyg0gVYRQ3Ny10kZnxO9QgRnxajBwntI5gjx/MSnEJN/4QYabEIl1
-V2O6ap/5N4wLygJEpQ/FEV7SeGed0IwQywoBQp0rwERYi9r6AS2Sr+tKCKRRcy5w
-C7m0neiIds0xO+wzSOblkGtenUTX3A4ST3UDuHM/vT1XbRaJsPXPyH+GCYV0bM75
-Ce5gH0zLABEBAAHCwoQEGAEKAA8FAlULX3cFCQ8JnAACGwwBKQkQePGf+u030lPA
-XSAEGQEKAAYFAlULX3cACgkQ11kOYRstGUmqmAf/QkllO2cN5yKZGd+B8/S42HLd
-PFiK1N+UkY2erT/4sJ0qpZJRgBWfJnYqkJpL3df8Cj/XP8av9onQ+l3mEFt4g1ak
-JFbPT/4jf8Jd9nTbhX5TNSevIB5JpiD7JW8zqmRNf01Jz9h8Y2pF0Z94bZgBT1Rz
-TuEIPKSELYeG+tZR8v+qp1/1jaZ2hXKDlLBWYWnJM5QzHn67WrRJRM805PSa7l5M
-+7LhkHn8J4Yfr9aGFPj2GItupvx1rhf8WiuLWsJgdrqgBS4nUkjPB439mJHtMgmu
-P0QQvaoqXrO4B+e3auJMuQAmUopC+62Q2ywkwA/pcyGua1ORzoN/zc/BsbBlhwft
-D/sG1pT0XXVkdK3PVc+sRqD4k5Q/Uas0RK7b23LTrKKAlXpyp5oS83vUMf3QCIV+
-d8kIC9SJmyGZiF/9hn0Jzs8x5qeRBx73ik6gY70z5OzSwr/PDuY7G1jF/YfS0E+9
-q0wHt2fas303g1H9v0r0vO7aLWwFpGSPwB/0LOgxzuNixQAGLt6+Sqw/6X9+hcWL
-nEtIr+2+/FMb1u5n4tCaqsXzcurjbxKDDNYXDkScWxS9l+BoJT9lAc4jtrz9WcR/
-eHqISKvbnYTvSKpOb5/1MC6VXlCAjV0ais2hRQ0NAkBuq1fbV2mUmZrPLifHcOgC
-T8V5prpICc8dgL/ME2h4jh3VHaxshnzVXXMR8gKoQSKWCAdwO0pVHpwybCj+abrj
-cRu7qpjxgBd6p2XkEJ1WdUPAgKkyVHkw3CJvut4TQqD6u3JAfQubHj1mPEzWexNI
-oLwViP5nozdjI+18IdFpfINywOb7K0YDUlBEnJcpcnsmUrnsJ4yrVcLZX8mAEhnP
-bG9grOicODYc3G5FOtCH9WNjNX+5PZqwHZORgcwCLeGWY7H93zci2gGiWc9OGrz2
-ZqaGQl623cHeXIoR2ESNpokpFOg/XegyRJ7+dkJ4x2qw/KTQMJv7oDgq9NMzn+bd
-5tNVfnRROv4fgFrQhkvVjEDZeMQEj1VFYPjiO7SRmFhwEw==
-=6VTv
------END PGP PUBLIC KEY BLOCK-----</p>
+<p>yMIfAnicbZJbSBVBGMePlVZiZlF0gbTWIh9EZnZ39nIoI5MuaoRGKSkcZ3a/PS7a
+2dPZPaYckqKLQj0ECWpQZnYsoYiyKBLpYhZlZVAJRSBFVzIkogv10q4VvTQvw3zf
+//+b+X/MzWkTfckJ6bGejs6nhR8TBq/nRX2bUjZfiHHM0us5f4yrhvHNMENBiIQj
+Zsjh/BwDhVBd1ZmIJaYSRREkAISxrBhYNQwKuiDrPBG4bK7Ksj2Hi2HUhhzTcmvu
+IWDqbvU/+urxBsIIKwoivKgSiVEiEwIakxlvKEjGkiBTEChDkqjpPFKxKgBgg+mG
+JFAJSwbD2ABEXVx0HMcUHhNJ0ABjTESMNAUbmPJIJgo1NKx6QhsiIboVXLWmOdyO
+bM4t1JoaeOm9EP+a7hBqICdoOlVR9jtQOGI5lmbVuP0qxwnbfs/v1Ic9w3ZggT+o
+ADNDujtI11ELEdu0Qpwfu0rNMT02FnlJkbGqKNkc1IXNCARMT0FkSUHu8u6BWhcp
+EpVHgETGq0jXRAkREQB4UTR4QWAUGAAhmkpAxIJgCBqSMC8hDYGqUipSnvPCbQtZ
+nF92n0mDLtI2gyHqRCPA7bhxrWKSLyHZl5Q4wfsKvuSpaX8/yNGkyT8mjs7N/XB1
+Zqx567fK7kfz9udsqxnrH8RtB75Vw74pDwrSS3wD1l4tlHE+/6zpqCUP05Pbs77n
+3lz4fG7K/Dnm4fziNaft2Ejq8IriPOt+T1HDSe71mRl3v5bdWl2QGb/y5cWdmUND
+u3Ibx+7lvuu+/f7S+uV99UP+xZkQSNuzsXTWoumr6MDnlcd36m/7nKDSNtqrlC3o
+fFtXd2hZxanC/vcJJQVd2xs6Kl+VNx6wXo32DtdcTol2cLPHdsfaW+INP1vWFWQ9
+bizqPzaYOKvKztrSXDpS39y1xL7Iz/8U3/DSWFoefzPHn3GkWI0/y8M9DWNmaumT
+c19afQezWtc2NZ1I+gV48SYd
+=QPq9
+-----END PGP MESSAGE-----</p>
+
+<p>And finally, I am proving ownership of this host by posting or
+appending to this document.</p>
+
+<p>View my publicly-auditable identity here: <a href="https://keybase.io/cct">https://keybase.io/cct</a></p>
+
+<h1></h1>
       </section>
     </div>
 
