--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="cctrinle.github.io : ">
+    <meta name="description" content="cctrinle.github.io/keybase.txt  : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>cctrinle.github.io</title>
+    <title>cctrinle.github.io/keybase.txt </title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cctrinle">View on GitHub</a>
 
-          <h1 id="project_title">cctrinle.github.io</h1>
+          <h1 id="project_title">cctrinle.github.io/keybase.txt </h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -27,37 +27,50 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1></h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h2>
+<a id="httpskeybaseiocct" class="anchor" href="#httpskeybaseiocct" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://keybase.io/cct">https://keybase.io/cct</a>
+</h2>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>I hereby claim:</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<ul>
+<li>I am an admin of <a href="https://cctrinle.github.io">https://cctrinle.github.io</a>
+</li>
+<li>I am cct (<a href="https://keybase.io/cct">https://keybase.io/cct</a>) on keybase.</li>
+<li>I have a public key with fingerprint 9976 F501 57AD 544B A6BC  5A56 18B6 FC67 878C BC89</li>
+</ul>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>-----BEGIN PGP MESSAGE-----
+Version: Keybase OpenPGP v2.0.8
+Comment: <a href="https://keybase.io/crypto">https://keybase.io/crypto</a></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>yMIbAnicbVJbSFRRFB2zUkcjjaAge138qBjknvs652pYVGQSBRX5EcJwXnfmps0d
+Z+6MaZnZG0IoIpIKIozoQYVGVIaRYaEpEihSH1lEU0pQIdgDJDvXin46P4ez91pr
+n7XYXbPSff6050uMjgLr+uG03s61Cd/2vPrJPRJxWK1UtEeq5FOXZUdCPBaN2RFX
+KpJMExqWLgMdYqZrGsEGoTrWDYCIYVEDIogoociUAlLYiXsMIUNwnBfajqiJR9Bm
+ovoffOVUQwYyUEzd4AqgkDFEuKVjVcxQKAaUGczQLMtgiGECBUZjBGAZm5qmYI0w
+nVEkcxkLucSUHEEK0A2VcgCArgGZImABrMhQR9iiwJubiPNYBO/iAk2pK9UHJFFI
+2pR77j0T/5oihCpeGLLdcIL8NhSNOa5DnSrRD7tuNF7k8d3aqEeo4ST4RypI7AgT
+QQpGksfithORioBAUtf2tIGmQEU2oQIDEt8dtWM8aHsIHRpIFsebw5NebBaRVdW0
+dM4BA4wyFcs6IcgikEBmItWQVV2TMaIQqACIRAyVyZqCTBkxSjXJM1cdcYS2Kv6J
+Q0Izboci2E3EuFT/+FHFdF+a3zdzxjRvF3z+rNy/G1KazPhpZhYcZR+2fRjtulGW
+taJ3a9+nE4tfZZW2Lx1cfPC4stA48X5SyQmebGrfWD446dt/Jmssxy65NACXpNau
+q90ZOrZgZktra2bl06GM8U/91aM358wtq9m87NTswI8tX7BWcb9prPncx7fdnSX9
+l9/WXQGB5vSexs/n24a/gbRd+5LFdwp7bqza9PBqxuqG4Q40oaaOlqe+WqUv7s0b
+W14+fhXGJubX+dsbV2ZXdTrhETAcbu699Xp7Xir3TcbWuwceHLp4WGp4QvOfvdtb
+VnN2VvXFbZfyybLi1JGTO7Sb7WtuD3UfbOp/d+jaKf+GvQOncz7Dl/V1ZFFp37r1
+2X3NIy1tF77/AmS/K94=
+=lVK3
+-----END PGP MESSAGE-----</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>And finally, I am proving ownership of this host by posting or
+appending to this document.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>View my publicly-auditable identity here: <a href="https://keybase.io/cct">https://keybase.io/cct</a></p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h1></h1>
       </section>
     </div>
 
