Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="cctrinle.github.io/keybase.txt  : ">
+    <meta name="description" content="cctrinle.github.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>cctrinle.github.io/keybase.txt </title>
+    <title>cctrinle.github.io</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/cctrinle">View on GitHub</a>
 
-          <h1 id="project_title">cctrinle.github.io/keybase.txt </h1>
+          <h1 id="project_title">cctrinle.github.io</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -27,20 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1></h1>
-
-<h2>
-<a id="httpskeybaseiocct" class="anchor" href="#httpskeybaseiocct" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://keybase.io/cct">https://keybase.io/cct</a>
-</h2>
-
-<p>I hereby claim:</p>
-
-<ul>
-<li>I am an admin of <a href="https://cctrinle.github.io">https://cctrinle.github.io</a>
-</li>
-<li>I am cct (<a href="https://keybase.io/cct">https://keybase.io/cct</a>) on keybase.</li>
-<li>I have a public key with fingerprint 9976 F501 57AD 544B A6BC  5A56 18B6 FC67 878C BC89</li>
-</ul>
+        <p>public key with fingerprint 9976 F501 57AD 544B A6BC  5A56 18B6 FC67 878C BC89</p>
 
 <p>-----BEGIN PGP MESSAGE-----
 Version: Keybase OpenPGP v2.0.8
@@ -64,13 +51,6 @@ VnN2VvXFbZfyybLi1JGTO7Sb7WtuD3UfbOp/d+jaKf+GvQOncz7Dl/V1ZFFp37r1
 2X3NIy1tF77/AmS/K94=
 =lVK3
 -----END PGP MESSAGE-----</p>
-
-<p>And finally, I am proving ownership of this host by posting or
-appending to this document.</p>
-
-<p>View my publicly-auditable identity here: <a href="https://keybase.io/cct">https://keybase.io/cct</a></p>
-
-<h1></h1>
       </section>
     </div>
 
